initial structure for index html begun

--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en-us">
+<head>
+    <meta charset="UTF-8">
+    <title></title>
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+    <div class="master_container">
+        <div class="top_bar">
+            <section class="hp_button">
+
+            </section>
+            <section class="navbar">
+
+            </section>
+        </div>
+        <!-- main bg is still above topbar -->
+        <div class="main_bg">
+            <div class="main_content">
+                <section class = "summary">
+
+                </section>
+                <section class = "viz_menu">
+                    
+                </section>
+            </div>
+        </div>
+    </div>
+
+</body>
+</html>
