--- a/pages/comparisons.html
+++ b/pages/comparisons.html
@@ -2,11 +2,11 @@
 <html lang="en-us">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Comparisons</title>
     <!-- <link rel="stylesheet" type="text/css" href="reset.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="../styles.css">
 </head>
 <body>
 
@@ -17,7 +17,7 @@
 
 <nav class="navbar navbar-expand-md navbar-light bg-light" id="nav_main">
     <div class="container-fluid" id="nav_main_cont">
-      <a class="navbar-brand" id="home_nav" href="index.html">Latitude</a>
+      <a class="navbar-brand" id="home_nav" href="../index.html">Latitude</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -30,17 +30,17 @@
               Plots
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="pages\vizualizations\viz_temp.html">Max Temperature</a></li>
-              <li><a class="dropdown-item" href="pages\vizualizations\viz_humidity.html">Humidity</a></li>
-              <li><a class="dropdown-item" href="pages\vizualizations\viz_cloud.html">Cloudiness</a></li>
-              <li><a class="dropdown-item" href="pages\vizualizations\viz_wind.html">Wind Speed</a></li>
+              <li><a class="dropdown-item" href="vizualizations\viz_temp.html">Max Temperature</a></li>
+              <li><a class="dropdown-item" href="vizualizations\viz_humidity.html">Humidity</a></li>
+              <li><a class="dropdown-item" href="vizualizations\viz_cloud.html">Cloudiness</a></li>
+              <li><a class="dropdown-item" href="vizualizations\viz_wind.html">Wind Speed</a></li>
             </ul>
           </li>
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="#">Comparison</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Data</a>
+            <a class="nav-link" href="data.html">Data</a>
           </li>
 
         </ul>
@@ -56,29 +56,28 @@
 
       <div class="container" id="main_window">
         <div class="row align-items-center">
-          <div class="col-md-7">
-              <!-- use BS gutters here? -->
-              <h1>Summary: Latitude vs. X</h1>
-              <img class="img-fluid rounded float-md-start" id="eg_img" src="Resources/assets/images/1.1-latitudevstemperature.png" class="rounded float-start" alt="">
-            <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p>
-            <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
-          </div>
-          <div class="col-md-5">
-              <h2>Vizualizations</h2>
+          <div class="col">
+              <h1>Comparison: Latitude vs X</h1>
+              <p>Click on any plot to get an in-depth analysis.</p>
               <!-- center these when large?? -->
             <div class="container" id="viz_grid">
                 <div class="row">
-                  <div class="col-3 col-md-6" id="viz_thumb_cont">
-                    <a href="pages\vizualizations\viz_temp.html"><img class="img-fluid" src="Resources/assets/images/1.1-latitudevstemperature.png" id="viz_thumb" alt=""></a>
+                  <div class="col-md-6 text-center" id="viz_thumb_cont">
+                    <h4>vs. Max Temperature</h4>
+                    <a href="vizualizations\viz_temp.html"><img class="img-fluid" src="../Resources/assets/images/1.1-latitudevstemperature.png" id="viz_thumb" alt=""></a>
                   </div>
-                  <div class="col-3 col-md-6" id="viz_thumb_cont">
-                    <a href="pages\vizualizations\viz_humidity.html"><img class="img-fluid" src="Resources/assets/images/1.2-latitudevshumidity.png" id="viz_thumb" alt=""></a>
+                  <div class="col-md-6 text-center" id="viz_thumb_cont">
+                    <h4>vs. Humidity</h4>
+                    <a href="vizualizations\viz_humidity.html"><img class="img-fluid" src="../Resources/assets/images/1.2-latitudevshumidity.png" id="viz_thumb" alt=""></a>
                   </div>
-                    <div class="col-3 col-md-6" id="viz_thumb_cont">
-                        <a href="pages\vizualizations\viz_cloud.html"><img class="img-fluid" src="Resources/assets/images/1.3-latitudevscloud.png" id="viz_thumb" alt=""></a>
+                  <!-- <div></div> -->
+                    <div class="col-md-6 text-center" id="viz_thumb_cont">
+                      <h4>vs. Cloudiness</h4>  
+                      <a href="vizualizations\viz_cloud.html"><img class="img-fluid" src="../Resources/assets/images/1.3-latitudevscloud.png" id="viz_thumb" alt=""></a>
                     </div>
-                    <div class="col-3 col-md-6" id="viz_thumb_cont">
-                        <a href="pages\vizualizations\viz_wind.html"><img class="img-fluid" src="Resources/assets/images/1.4-latitudevswind.png" id="viz_thumb" alt=""></a>
+                    <div class="col-md-6 text-center" id="viz_thumb_cont">
+                      <h4>vs. Wind Speed</h4>
+                      <a href="vizualizations\viz_wind.html"><img class="img-fluid" src="../Resources/assets/images/1.4-latitudevswind.png" id="viz_thumb" alt=""></a>
                     </div>
                   </div>
               </div>
