--- a/pages/vizualizations/viz_cloud.html
+++ b/pages/vizualizations/viz_cloud.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Cloudiness</title>
     <!-- <link rel="stylesheet" type="text/css" href="reset.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
@@ -37,10 +37,10 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Comparison</a>
+            <a class="nav-link" aria-current="page" href="../comparisons.html">Comparison</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Data</a>
+            <a class="nav-link" href="../data.html">Data</a>
           </li>
 
         </ul>
@@ -58,7 +58,7 @@
         <div class="row align-items-center">
           <div class="col-md-7 text-center">
               <!-- use BS gutters here? -->
-              <h1>Cloud Coverage</h1>
+              <h1>Cloudiness</h1>
               <img class="img-fluid" id="eg_img" src="../../Resources/assets/images/1.3-latitudevscloud.png" class="rounded float-start" alt="">
             <p>The northern and southern hemispheres see poor correlation between global latitude and cloud coverage (at R^2 = 0.138 and 0.041 respectively). The slope of the regressions imply a possible increaase in cloud coverage with increase in latitude.</p>
           </div>
