--- a/pages/data.html
+++ b/pages/data.html
@@ -17,7 +17,7 @@
 
 <nav class="navbar navbar-expand-md navbar-light bg-light" id="nav_main">
     <div class="container-fluid" id="nav_main_cont">
-      <a class="navbar-brand" id="home_nav" href="../index.html">Latitude</a>
+      <a class="navbar-brand" id="home_nav" href="../index.html"><h4>Latitude</h4></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
