--- a/pages/vizualizations/viz_cloud.html
+++ b/pages/vizualizations/viz_cloud.html
@@ -17,7 +17,7 @@
 
 <nav class="navbar navbar-expand-md navbar-light bg-light" id="nav_main">
     <div class="container-fluid" id="nav_main_cont">
-      <a class="navbar-brand" id="home_nav" href="../../index.html">Latitude</a>
+      <a class="navbar-brand" id="home_nav" href="../../index.html"><h4>Latitude</h4></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -55,17 +55,17 @@
 <!-- 2x2 grid that collapses to 4x1 on md breakpoint -->
 
       <div class="container" id="main_window">
-        <div class="row align-items-center">
+        <div class="row align-items-start">
           <div class="col-md-7 text-center">
               <!-- use BS gutters here? -->
               <h1>Cloudiness</h1>
               <img class="img-fluid" id="eg_img" src="../../Resources/assets/images/1.3-latitudevscloud.png" class="rounded float-start" alt="">
             <p>The northern and southern hemispheres see poor correlation between global latitude and cloud coverage (at R^2 = 0.138 and 0.041 respectively). The slope of the regressions imply a possible increaase in cloud coverage with increase in latitude.</p>
           </div>
-          <div class="col-md-5">
+          <div class="col-md-5" id="viz_grid">
               <h2>Vizualizations</h2>
               <!-- center these when large?? -->
-            <div class="container" id="viz_grid">
+            <div class="container">
                 <div class="row">
                   <div class="col-3 col-md-6" id="viz_thumb_cont">
                     <a href="viz_temp.html"><img class="img-fluid" src="../../Resources/assets/images/1.1-latitudevstemperature.png" id="viz_thumb" alt=""></a>
